# Agentic_Design_Patterns

./: pyproject.toml
notebooks/: Appendix_ Pydantic.ipynb
