[project]
name = "agentic-design-patterns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=1.6.0",
    "fastmcp>=2.13.1",
    "google-adk>=1.19.0",
    "google-genai>=1.52.0",
    "ipykernel>=7.1.0",
    "langchain>=1.1.0",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
]
